--- a/cme.html
+++ b/cme.html
@@ -440,14 +440,14 @@
 <section id="open-interest" class="slide level2">
 <h2>Open Interest</h2>
 
-<img data-src="wti%20oi.png" style="width:70.0%" class="r-stretch"><div class="footer">
+<img data-src="wti%20oi.png" class="r-stretch"><div class="footer">
 <p>Source <a href="https://www.cmegroup.com/tools-information/quikstrike/options-open-interest-profile.html">CME</a></p>
 </div>
 </section>
 <section id="commitments-of-traders-report" class="slide level2">
 <h2>Commitments of Traders Report</h2>
 
-<img data-src="wti%20cot.png" style="width:70.0%" class="r-stretch quarto-figure-center"><div class="footer">
+<img data-src="wti%20cot.png" class="r-stretch"><div class="footer">
 <p>Source <a href="https://www.cmegroup.com/tools-information/quikstrike/commitment-of-traders.html">CME</a>, <a href="https://www.cftc.gov/MarketReports/CommitmentsofTraders/index.htm">CFTC</a></p>
 </div>
 </section>
@@ -537,7 +537,7 @@ A “money manager,” for the purpose of this report, is a registered commodity
         controlsTutorial: false,
 
         // Determines where controls appear, "edges" or "bottom-right"
-        controlsLayout: 'edges',
+        controlsLayout: 'bottom-right',
 
         // Visibility rule for backwards navigation arrows; "faded", "hidden"
         // or "visible"
